=======
Changes
=======

3.5.3 (unreleased)
------------------

- ...

3.5.2 (2009-02-04)
------------------

- Made validation tests compatible with Python 2.5 again (hopefully not
  breaking Python 2.4)

- Added an __all__ package attribute to expose documentation.

3.5.1 (2009/01/31)
------------------

- Stop using the old old set type.

- Make tests compatible and silent with Python 2.4.

- Fix __cmp__ method in ValidationError. Show some side effects based on the
  existing __cmp__ implementation. See validation.txt

- Make 'repr' of the ValidationError and its subclasses more sensible. This
  may require you to adapt your doctests for the new style, but now it makes
  much more sense for debugging for developers.


3.5.0a2 (2008/12/11)
--------------------

- Move zope.testing to "test" extras_require, as it is not needed
  for zope.schema itself.

- Change the order of classes in SET_TYPES tuple, introduced in
  previous release to one that was in 3.4 (SetType, set), because
  third-party code could be dependent on that order. The one
  example is z3c.form's converter.

3.5.0a1 (2008/10/10)
--------------------

- Added the doctests to the long description.

- Removed use of deprecated 'sets' module when running under Python 2.6.

- Removed spurious doctest failure when running under Python 2.6.

- Added support to bootstrap on Jython.

- Added helper methods for schema validation: ``getValidationErrors``
  and ``getSchemaValidationErrors``.

- zope.schema now works on Python2.5


3.4.0 (2007/09/28)
------------------


Added BeforeObjectAssignedEvent that is triggered before the object
field sets a value.

3.3.0 (2007/03/15)
------------------

Corresponds to the version of the zope.schema package shipped as part of
the Zope 3.3.0 release.

3.2.1 (2006/03/26)
------------------

Corresponds to the version of the zope.schema package shipped as part of
the Zope 3.2.1 release.

Fixed missing import of 'VocabularyRegistryError'.  See